# App-Manager

./: CMakeLists.txt  CMakePresets.json  CMakePresets.md  CODE_OF_CONDUCT.md  README.md  main.cpp
.github/workflows/: ci.yml  codecov-coverage.yml
docs/: Coding-Guidelines.md  Configuration.md  Documentation.md  FAQ.md  Support-Json.md  Testing-Documentation.md
header/: DownloadThread.h  MainWindow.h  ui_MainWindow.h
src/: DownloadThread.cpp  MainWindow.cpp  MainWindow.json
